--- a/Frontend/parth-traders/src/index.html
+++ b/Frontend/parth-traders/src/index.html
@@ -10,6 +10,8 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" />
   <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
+  <script
+    src="https://www.paypal.com/sdk/js?currency=USD&client-id=AUfVWC_cUkAqgWc8L0rYLhf5QjvA5BgmmAH-TTDxs1BSyujiu9GNGLRy2UyWNV1voh19Cqi8rYFx9nKH"></script>
 </head>
 
 <body>
