- enabled placing order api connecting backend and paypal - added order and order detail components to display past orders - fixed filter product logic - fixed other breaking logic

--- a/Frontend/parth-traders/src/index.html
+++ b/Frontend/parth-traders/src/index.html
@@ -12,6 +12,8 @@
   <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
   <script
     src="https://www.paypal.com/sdk/js?currency=USD&client-id=AUfVWC_cUkAqgWc8L0rYLhf5QjvA5BgmmAH-TTDxs1BSyujiu9GNGLRy2UyWNV1voh19Cqi8rYFx9nKH"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
 <body>
